--- a/dotfiles/callums.tmux.conf
+++ b/dotfiles/callums.tmux.conf
@@ -3,12 +3,20 @@
 # see https://github.com/tmux-plugins/tmux-sensible
 set -g @almost-sensible 'on'
 
+# allow dynamic cursor in vim
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 # configuration of the status line
 set -g status-left-length 32
 set -g status-right-length 150
 set -g status-fg white
 set -g status-bg black
-set -g window-status-activity-attr bold
+
 set -g pane-border-fg colour245
 set -g pane-active-border-fg colour39
 set -g message-fg colour16
@@ -16,23 +24,68 @@ set -g message-bg colour221
 set -g message-attr bold
 set -g base-index 1
 setw -g pane-base-index 1
-set -g status-left '#[fg=colour15,bg=colour11,bold] #S '
+#set -g status-left '#[fg=colour15,bg=colour11,bold] #S #[fg=white,bg=black] '
+defaultdisp="#[fg=colour15,bg=colour11,bold]"
+prefixdisp="#[fg=colour25,bg=colour39,bold]"
+plaindisp="#[fg=white,bg=black]"
+#set -g status-left "#{?client_prefix,{$prefixdisp},{$defaultdisp}} #S $plaindisp "
+set -g status-left "$defaultdisp #S $plaindisp "
+
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
+set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #I #W "
+set -g status-right "%a %d %b, %I:%M %p"
 
 # position the status bar at top of screen
 set-option -g status-position top
-set -g status-right "#(date)"
+
+# visual notification of activity in other windows
+setw -g monitor-activity on
+set -g window-status-activity-attr bold
+
+# automatically renumber window numbers on closing a pane (tmux >= 1.7).
+set -g renumber-windows on
+
+# dynamically update window titles
+set -g set-titles on
+set-option -g set-titles-string '#W'  # program name
+
+# increase history limit up from default of 2000
+set -g history-limit 100000
 
 # splits open in same working directory
 bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
 
 # mouse control
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set-option -g -q mouse on
+
+# setup 'v' to begin selection as in Vim
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+# For those times when C-c and q are not enough.
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+
+# stay in copy mode on drag end.
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+
+# clear selection on click; makes for nicer consecutive drags.
+bind-key -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection
+
+# scroll 3 lines at a time instead of default 5; don't extend dragged selections.
+bind-key -T copy-mode-vi WheelUpPane send-keys -X clear-selection\; send-keys -X -N 3 scroll-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X clear-selection\; send-keys -X -N 3 scroll-down
+
+# make double and triple click work outside of copy mode (already works inside it with default bindings).
+bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -X select-word"
+bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -X select-line"
+
+# search back to last prompt
+#bind-key b copy-mode\; send-keys -X start-of-line\; send-keys -X -N 3 cursor-up\; send-keys -X search-backward "# callumhoward"
+
+# Don't wrap searches; it's super confusing given tmux's reverse-ordering of
+# position info in copy mode.
+set -w -g wrap-search off
 
 # List of plugins
 # Supports `github_username/repo` or full git URLs
